# teatree

./: .claudeignore  .codespell-dictionary.txt  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .jscpd.json  .markdownlint-cli2.yaml  .mcp.json  .pr-body.md  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  ARCHITECTURE.md  BLUEPRINT.md  CLAUDE.md  LICENSE  MAP.md  README.md  RESUME.md  apm.yml  manage.py  mkdocs.yml  pr-body.txt  pyproject.toml  requirements.audit.ignore  sbom.json  settings.json  stash-foreign-settings-refactor-aside.patch  tach.toml
.apm/contexts/: teatree.context.md
.ast-grep/: sgconfig.yml
.ast-grep/blocking/: cas-stamp-before-side-effect.yml  consume-before-side-effect-not-atomic.yml  except-swallow-to-empty.yml  gate-conflates-scanner-error-with-finding.yml  lenient-git-run-dead-except.yml  predictable-temp-path.yml  response-json-on-2xx-uncaught.yml  signal-receiver-without-fault-isolation.yml
.claude-plugin/: marketplace.json  plugin.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  investigation.yml
.github/workflows/: ci.yml  deploy-hetzner.yml  deploy.yml  docs.yml  eval-benchmark.yml  eval-ci-heal.yml  eval-nightly.yml  eval-pr-reusable.yml  eval-pr.yml  eval-weekly-reusable.yml  eval.yml  needs-triage.yml  publish-image.yml  uv-lock-upgrade.yml
.semgrep/blocking/: cas-stamp-before-side-effect.yaml  consume-before-side-effect-not-atomic.yaml  except-swallow-to-empty.yaml  gate-conflates-scanner-error-with-finding.yaml  predictable-temp-path.yaml  response-json-on-2xx-uncaught.yaml  signal-receiver-without-fault-isolation.yaml
.semgrep/warn/: cas-stamp-before-side-effect.yaml  consume-before-side-effect-not-atomic.yaml  except-swallow-to-empty.yaml  gate-fails-open-on-nonzero.yaml  response-json-on-2xx-uncaught.yaml  signal-receiver-without-fault-isolation.yaml
agents/: answerer.md  bughunter.md  coder.md  debugger.md  e2e-review.md  e2e.md  followup.md  orchestrator.md  planner.md  review-request.md  reviewer.md  scanning-news.md  shipper.md  tester.md  triage-assessor.md
deploy/: Dockerfile  README.md  claude-settings.template.json  deploy.sh  docker-compose.yml  entrypoint.sh  migrate-volume-data.sh  t3  teatree-watchdog.service  teatree-watchdog.timer  watchdog.sh
dev/: .test_durations  Dockerfile.e2e  Dockerfile.test  ci-parity-fast.sh  ci-parity.sh  ci-shard.sh  docker-compose.dashboard.yml  docker-compose.yml  push-gate.sh  test-affected.sh  test-cov.sh  test-fast.sh  test-matrix.sh
dev/ci/: pr-empty-brands.toml
docs/: MAP.md  architecture.md  claude-code-internals.md  cli-parity.md  cli.md  contributing.md  dashboard.md  debug-runbook.md  dependency-graph.md  index.md  install.md  management-commands.md  overlay-api.md  provisioning-rootcause-2026-05-27.md  security.md  skill-triggers.md  test-strategy.md  testing-skill-evals.md
docs/audits/: 2026-05-19-cc-best-practices.md
docs/blueprint/: agent-execution.md  architecture-and-package.md  backends-and-sync.md  command-tiers.md  configuration.md  dependencies-and-conventions.md  django-workflows.md  domain-models.md  factory-architecture.md  loop-topology.md  memory-consolidation.md  overlay-system.md  rubric-done-gate.md  skills-testing-gates.md
docs/design/: autonomous-lane-redesign.md  own-loop-scheduler.md  three-fsm-architecture.md
docs/diagrams/: README.md
docs/evals/: index.md  sota-eval-runner.md
e2e/: CLAUDE.md  README.md  _dashboard_helpers.py  asgi.py  conftest.py  overlay.py  pytest.ini  settings.py  test_dashboard.py  test_dashboard_buttons.py  test_dashboard_display.py  test_dashboard_filters.py  test_dashboard_fixes.py  test_dashboard_flows.py  test_dashboard_panels.py
e2e/dash/: pom.py  (+10 more)
evals/: README.md  cost_bounds.yaml  recipe.yaml  under_load_known_red.yaml
hooks/: CLAUDE.md  hooks.json
recovered-work/: MANIFEST.md  WORKTREES-MANIFEST.md
references/: agent-rules.md  extension-points.md  overlay-templates.md  prerequisites.md  scripts-and-functions.md  ticket-transitions.md  troubleshooting.md
scripts/: ai_signature_scan.py  analyze_video.py  bump-pyproject-deps-from-lock-file.py  cancel_stale_pipelines.py  check-quality-relaxation.sh  check_skill_versions.py  check_transition_gates.py  collect_followup_data.py  coverage.sh  create_mr.py  detect_tenant.py  divergence_check.py  fetch_issue_context.py  generate-cli-reference.sh  generate_dashboard.py  git_clean_them_all.py  install_skills.sh  privacy_scan.py  review_request.py  run_e2e.py  smoke_test.py  t3_cli.py  verify_services.py  ws_ticket.py  wt_db_refresh.py  wt_finalize.py  wt_setup.py
skills/: CLAUDE.md
src/: t3_bootstrap.py
t3-code/: SKILL.md
t3-contribute/: SKILL.md
t3-debug/: SKILL.md
t3-followup/: SKILL.md
t3-retro/: SKILL.md
t3-review/: SKILL.md
t3-review-request/: SKILL.md
t3-setup/: SKILL.md
t3-ship/: SKILL.md
t3-test/: SKILL.md
t3-ticket/: SKILL.md
t3-workspace/: SKILL.md
tests/: CLAUDE.md  README.md  _ansi.py  _color_env.py  _db_template.py  _git_repo.py  _unreadable_file.py  conftest.py  db_alias.py  django_settings.py  factories.py  skill_cli_ratchet_grandfathered.txt  test_account_switch_session_start_hook.py  test_ai_signature_scan_script.py  test_analyze_video.py  test_analyze_video_script.py  test_ansi_helper.py  test_answered_at_gate_stop_hook.py  test_answered_at_stamp_concurrency.py  test_apm_package_structure.py  test_approval.py  test_architecture_contract.py  test_architecture_design_companion.py  test_autostart.py  test_away_mode_hook.py  test_bad_artifacts.py  test_banned_terms_env_override_eval.py  test_banned_terms_hook.py  test_banned_terms_parity.py  test_banned_terms_scanner.py  test_banned_terms_shell_fallback.py  test_banned_terms_single_resolver_conformance.py  test_banned_terms_tree_scan.py  test_bare_reference_scanner.py  test_bash_command_blocker.py  test_block_ai_signature_forge_body_class.py  test_block_ai_signature_hook.py  test_block_secret_file_print_hook.py  test_block_uncovered_diff_hook.py  test_blueprint_loop_epic_alignment.py  (+345 more)
(+5460 files in other folders)
