[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.7,<0.12" ]

[project]
name = "teatree"
version = "0.0.1"
description = "Personal code factory for multi-repo projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # ``t3 tool diff-coverage`` and ``t3 ci coverage`` are RUNTIME commands
  # that import ``coverage`` (utils/diff_coverage.py, utils/coverage_floor.py).
  # It must be present in the installed tool env, not only the dev group —
  # otherwise a real run dies with ModuleNotFoundError and the #937 gate-12
  # PreToolUse hook used to treat that crash as a coverage finding (#122).
  "coverage>=7",
  "croniter>=6.2.2",
  "django>=5.2,<6.1",
  "django-fsm-2>=4",
  "django-rich>=2.2",
  "django-tasks>=0.9",
  "django-tasks-db>=0.12",
  "django-typer>=3.3",
  "httpx>=0.27",
  # ``teatree.eval.loader`` imports ``yaml`` at module load, and that module
  # is reached from ``teatree.cli.__init__`` — so a missing ``pyyaml`` crashes
  # EVERY ``t3`` invocation, which in turn makes the §17.6 gate-15
  # AI-signature PreToolUse hook fail CLOSED (a ``t3`` non-zero exit reads as
  # a finding) and locks out commits. Same class as the #122 ``coverage``
  # runtime-dep fix; declared here so the installed tool env always has it.
  "pyyaml>=6",
  "tomlkit>=0.13",
]
# ``t3 tool to-markdown`` converts PDF/XLSX/DOCX/PPTX attachments to Markdown.
# Narrow extras only — never ``markitdown[all]`` (avoids audio/onnx weight).
optional-dependencies.markdown = [ "markitdown[docx,pdf,pptx,xlsx]>=0.1.6" ]
optional-dependencies.notion = [ "browser-cookie3>=0.20" ]
optional-dependencies.slack = [ "slack-sdk>=3.35" ]
scripts = { t3 = "t3_bootstrap:main" }

entry-points."teatree.overlays".t3-teatree = "teatree.contrib.t3_teatree.overlay:TeatreeOverlay"

[dependency-groups]
# --- Ruff ---
# Strategy: enable ALL rules, then ignore specific ones with justification.
# https://docs.astral.sh/ruff/rules/
dev = [
  "browser-cookie3>=0.20",
  "cyclonedx-bom>=6",
  "django-types>=0.23",
  "factory-boy>=3.3",
  "import-linter>=2.3",
  "inline-snapshot>=0.13",
  "patchy>=2.7",
  "prek>=0.2.12",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-django>=4.11.1",
  "pytest-playwright>=0.7",
  "pytest-playwright-visual>=2.1.2",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.5",
  "ruff>=0.14.2",
  "slack-sdk>=3.35",
  "tach>=0.34",
  "ty>=0.0.18",
  "typer>=0.12",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
lint.select = [ "ALL" ]
lint.ignore = [
  "CPY001", # missing-copyright-notice — not applicable
  # D1xx: missing docstrings — we prefer self-documenting code over docstrings
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203", # one-blank-line-before-class — conflicts with D211
  "D213", # multi-line-summary-second-line — conflicts with D212
  # DOC: docstring content rules — disabled since we skip docstrings entirely
  "DOC201",
  "DOC402",
  "DOC501",
  "INP001", # implicit-namespace-package — scripts/ is not a package
  "ISC002", # implicit-str-concat-in-sequence — interferes with multiline strings
]
# Rules that conflict with ruff's own formatter.
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
lint.extend-ignore = [
  "COM812",
  "COM819", # trailing comma rules
  "D206",
  "D300",   # docstring whitespace/triple-quote rules
  "E111",
  "E114",
  "E117",   # indentation rules
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "Q004",   # quote rules
  "W191",   # tab indentation
]
lint.per-file-ignores."e2e/**/*.py" = [
  "ANN",     # E2E test/fixture annotations not enforced
  "ARG001",
  "ARG002",  # overlay method signatures
  "PLC0415", # deferred Django imports (setup not yet called)
  "PLR6301", # overlay methods
  "S101",    # assert in tests
  "S105",    # hardcoded secret key (test only)
  "S108",    # /tmp paths (test fixtures)
  "S404",    # subprocess
  "TRY300",  # try/return in server wait loop
]
# Scripts use typer (default args), deferred imports (E402), boolean params
# (FBT), subprocess (S4xx/S6xx), and print (T201).
lint.per-file-ignores."scripts/**/*.py" = [
  "C901",    # too-complex (intent detection is inherently branchy)
  "E402",    # module-import-not-at-top (deferred after lib.init)
  "FBT001",
  "FBT003",  # boolean positional/default (CLI flags)
  "PLC0415", # import-outside-top-level (deferred imports)
  "PLR0912", # too-many-branches (intent detection)
  "PLW1510", # subprocess-run-without-check (intentional)
  "PLW2901", # redefined-loop-variable (intentional strip pattern)
  "S404",
  "S603",
  "S607",    # subprocess security (trusted internal calls)
  "T201",    # print (CLI output)
]
lint.per-file-ignores."src/t3_bootstrap/_main.py" = [
  "PLC0415", # import-outside-top-level — the bootstrap's whole point is to import teatree AFTER sys.path manipulation.
]
lint.per-file-ignores."src/teatree/cli/*.py" = [
  "B008",   # function-call-in-default-argument (typer.Option/Argument is idiomatic)
  "FBT003", # boolean positional/default (typer CLI flags)
  "S607",   # partial executable paths (uv is a trusted internal tool)
]
lint.per-file-ignores."src/teatree/cli/__init__.py" = [
  "RUF067", # Typer app construction, callbacks, helpers, and registration live here
]
lint.per-file-ignores."src/teatree/core/management/commands/*.py" = [
  "PLR6301", # django-typer command methods intentionally live on Command classes
  "S607",    # partial executable paths (git, dropdb, direnv, prek) are trusted internal tools
]
lint.per-file-ignores."src/teatree/core/migrations/*.py" = [
  "ANN",    # Django migrations don't need type annotations
  "ARG001", # Django migration functions receive apps/schema_editor by convention
  "E501",   # Django-generated migrations are left in generated form
  "RUF012", # Django migrations intentionally use mutable class attributes
]
lint.per-file-ignores."src/teatree/core/overlay.py" = [
  "ARG002",
  "PLR6301", # overlay hook defaults are instance methods by contract
]
lint.per-file-ignores."src/teatree/core/views/*.py" = [
  "PLR6301", # Django class-based views intentionally implement HTTP verb methods on the class
]
lint.per-file-ignores."src/teatree/utils/*.py" = [
  "S404",
  "S603",
  "S607", # trusted internal subprocess wrappers around git and postgres CLIs
]
# Tests use assert, magic values, private access, etc.
lint.per-file-ignores."tests/**/*.py" = [
  "ANN",     # type annotations not enforced in tests
  "ARG001",
  "ARG002",  # unused method arguments (overlay stubs)
  "ARG005",
  "PLC1901", # compare-to-empty-string
  "PLC2701", # import-private-name
  "PLR0904", # too-many-public-methods (test classes)
  "PLR2004", # magic-value-comparison
  "PLR6301", # no-self-use (test methods)
  "S101",    # assert (expected in tests)
  "S105",
  "S106",
  "S108",    # hardcoded-temp-file (test fixtures)
  "S404",    # subprocess-import
  "S603",    # subprocess call with trusted test inputs (integration tests)
  "SLF001",  # private-member-access (testing internals)
]
lint.fixable = [ "ALL" ]
lint.unfixable = [ "F401", "F811" ] # Never auto-delete imports — ruff misjudges usage in some patterns
lint.flake8-implicit-str-concat.allow-multiline = false
lint.flake8-tidy-imports.banned-api."__future__.annotations" = { msg = "Use native 3.10+ syntax (X | Y) instead of from __future__ import annotations" }
lint.isort.split-on-trailing-comma = false
lint.pydocstyle.convention = "google"
# Complexity limits
lint.pylint.max-args = 5
lint.pylint.max-bool-expr = 5
lint.pylint.max-branches = 12
lint.pylint.max-locals = 15
lint.pylint.max-nested-blocks = 5
lint.pylint.max-public-methods = 25
lint.pylint.max-returns = 6
lint.pylint.max-statements = 50
lint.preview = true

[tool.codespell]
dictionary = ".codespell-dictionary.txt,-"
ignore-words-list = "iterm"
skip = "src/teatree/core/static/teatree/js/*"

# --- Pytest ---

[tool.pytest.ini_options]
addopts = """
--color=yes --doctest-modules --exitfirst --failed-first
--strict-config --strict-markers --verbose --log-cli-level=INFO
--cov --cov-report=term-missing:skip-covered --cov-branch
--reuse-db
"""
timeout = 60
DJANGO_SETTINGS_MODULE = "tests.django_settings"
django_find_project = false
testpaths = [ "tests" ]
pythonpath = [ ".", "src", "scripts", "scripts/hooks", "tests" ]
filterwarnings = [
  "error",
  "ignore:In Typer, only the parameter 'autocompletion' is supported.*:DeprecationWarning",
  "ignore:POSTGRES_PASSWORD literal is deprecated.*:DeprecationWarning",
]
xfail_strict = true
markers = [
  "integration: tests that run real subprocesses (shell scripts, git, etc.)",
]

# --- Coverage ---

[tool.coverage.report]
fail_under = 93
precision = 1
show_missing = true
exclude_lines = [
  "if __name__",
  "if TYPE_CHECKING",
  "def main\\(",
  "pragma: no cover",
]
partial_branches = [
  "pragma: no branch",
]

[tool.coverage.run]
branch = true
source = [
  "src/teatree",
]
omit = [ "src/teatree/core/migrations/*.py" ]

# Per-module coverage floors — read by ``t3 ci coverage`` and enforced by
# ``tests/test_coverage_floor_guard.py::TestPerModuleFloorsConfig``.
# Tighter than the project-wide 93% floor for newly-added modules where a
# small file dropping to 30% would still leave the project >= 93%.

# --- import-linter ---
# Complements tach: tach's depends_on is a direct-edge allow-list; these
# contracts catch the transitive/laundered chains and the wildcard
# sibling-independence invariants tach's per-module model cannot express
# (BLUEPRINT §17.6.2, #724/#725). Only contracts that are GREEN on the current
# tree are kept; the transitive-layers, acyclic, backend-independence and
# domain-forbids-typer/httpx contracts are deferred until the core↔backends
# cycles are broken (#179/#180) — see the PR body.

[tool.importlinter]
root_package = "teatree"

[[tool.importlinter.contracts]]
name = "Substrate must not import a concrete overlay"
type = "forbidden"
source_modules = [
  "teatree.core",
  "teatree.cli",
  "teatree.loop",
  "teatree.loops",
  "teatree.backends",
  "teatree.agents",
]
forbidden_modules = [ "teatree.contrib" ]

[[tool.importlinter.contracts]]
name = "Mini-loops are mutually independent"
type = "independence"
modules = [
  "teatree.loops.arch_review",
  "teatree.loops.audit",
  "teatree.loops.dispatch",
  "teatree.loops.dogfood",
  "teatree.loops.followup",
  "teatree.loops.housekeeping",
  "teatree.loops.inbox",
  "teatree.loops.issue_implementer",
  "teatree.loops.news",
  "teatree.loops.resource_pressure",
  "teatree.loops.review",
  "teatree.loops.ship",
  "teatree.loops.tickets",
]

[[tool.importlinter.contracts]]
name = "Domain core must not import the messaging layer"
type = "forbidden"
source_modules = [ "teatree.core" ]
forbidden_modules = [ "teatree.messaging", "teatree.notify" ]
# teatree.core.management is the interface (CLI-command) layer per tach, not the
# domain layer this contract guards; its commands legitimately drive the loop
# (which reaches messaging). Excluding the interface subtree leaves the contract
# biting every domain module under teatree.core — none of which reaches
# messaging today.
ignore_imports = [ "teatree.core.management.** -> **" ]

[tool.teatree.coverage]
per_module_floors = [
  { path = "src/teatree/loop/persistence.py", floor = 80 },
  { path = "src/teatree/loop/rendering.py", floor = 80 },
  { path = "src/teatree/loop/dispatch.py", floor = 80 },
  { path = "src/teatree/loop/pr_ticket_index.py", floor = 80 },
]

# Conservative test-shape check — read by ``t3 tool test-shape`` (see
# ``src/teatree/quality/test_shape.py``). ``mode`` defaults to "warn"
# (non-blocking report); set "block" to fail CI on a regression. The
# baseline is the committed test:source ratio snapshot — a finding fires
# ONLY when the live ratio drops below it past ``tolerance`` (ratchet, never
# an absolute threshold). Re-baseline with ``t3 tool test-shape
# --update-baseline`` when a drop is intentional and reviewed.

[tool.teatree.test_shape]
mode = "warn"
min_cluster = 3
test_lines = 117490
source_lines = 64500
tolerance = 0.05

[tool.uv.build-backend]
module-name = [ "teatree", "t3_bootstrap" ]

# --- Ty (static type checker) ---
# https://github.com/astral-sh/ty

[tool.ty]
terminal = { error-on-warning = true }

[tool.ty.src]
exclude = [ ".claude/worktrees/" ]

[tool.ty.environment]
extra-paths = [ ".", "src", "scripts", "scripts/hooks", "tests" ]
python-version = "3.13"

[tool.ty.analysis]
allowed-unresolved-imports = [
  "django.tasks", # Django 6 exposes this dynamically and ty cannot resolve it yet, even with django-types
  "markitdown",   # Optional dependency (markdown extra), guarded by try/except ImportError
  "mkdocs",       # Optional dependency, guarded by try/except ImportError
  "lib.env",      # Legacy scripts — guarded by try/except ImportError
  "lib.gitlab",   # Legacy scripts — guarded by try/except ImportError
  "lib.registry", # Legacy scripts — guarded by try/except ImportError
]

[tool.ty.rules]
division-by-zero = "error"
possibly-unresolved-reference = "error"
unused-ignore-comment = "error"
no-matching-overload = "error"

[[tool.ty.overrides]]
include = [ "tests" ]
# Tests use tmp_path / "file" (ty can't resolve Path.__truediv__) and
# intentionally use broad *args/**kwargs for monkey-patching
[tool.ty.overrides.rules]
unsupported-operator = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"

[tool.uv]
managed = true
package = true
