[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.7,<0.12" ]

[project]
name = "teatree"
version = "0.0.1"
description = "Personal code factory for multi-repo projects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "claude-agent-sdk>=0.2.94",
  # ``t3 tool diff-coverage`` and ``t3 ci coverage`` are RUNTIME commands
  # that import ``coverage`` (utils/diff_coverage.py, utils/coverage_floor.py).
  # It must be present in the installed tool env, not only the dev group —
  # otherwise a real run dies with ModuleNotFoundError and the #937 gate-12
  # PreToolUse hook used to treat that crash as a coverage finding (#122).
  "coverage>=7",
  "croniter>=6.2.2",
  "django>=5.2,<6.1",
  "django-fsm-2>=4",
  "django-rich>=2.2",
  "django-tasks>=0.9",
  "django-tasks-db>=0.12",
  "django-typer>=3.3",
  "httpx>=0.27",
  # ``teatree.core.test_plan_validation`` opens evidence PNGs with Pillow to
  # detect the highlightAndShoot red box before ``e2e post-test-plan`` uploads.
  # A RUNTIME command path, so it must be in the installed tool env, not only
  # the dev group — same class as the ``coverage`` / ``pyyaml`` runtime deps.
  "pillow>=11",
  # ``teatree.eval.loader`` imports ``yaml`` at module load, and that module
  # is reached from ``teatree.cli.__init__`` — so a missing ``pyyaml`` crashes
  # EVERY ``t3`` invocation, which in turn makes the §17.6 gate-15
  # AI-signature PreToolUse hook fail CLOSED (a ``t3`` non-zero exit reads as
  # a finding) and locks out commits. Same class as the #122 ``coverage``
  # runtime-dep fix; declared here so the installed tool env always has it.
  "pyyaml>=6",
  "tomlkit>=0.13",
]
# ``t3 tool to-markdown`` converts PDF/XLSX/DOCX/PPTX attachments to Markdown.
# Narrow extras only — never ``markitdown[all]`` (avoids audio/onnx weight).
optional-dependencies.markdown = [ "markitdown[docx,pdf,pptx,xlsx]>=0.1.6" ]
optional-dependencies.notion = [ "browser-cookie3>=0.20" ]
optional-dependencies.slack = [ "slack-sdk>=3.35" ]
scripts = { t3 = "t3_bootstrap:main" }

entry-points."teatree.overlays".t3-teatree = "teatree.contrib.t3_teatree.overlay:TeatreeOverlay"

[dependency-groups]
# --- Ruff ---
# Strategy: enable ALL rules, then ignore specific ones with justification.
# https://docs.astral.sh/ruff/rules/
dev = [
  "browser-cookie3>=0.20",
  "cyclonedx-bom>=6",
  "django-types>=0.23",
  "factory-boy>=3.3",
  "import-linter>=2.3",
  "inline-snapshot>=0.13",
  "patchy>=2.7",
  "prek>=0.2.12",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-django>=4.11.1",
  "pytest-playwright>=0.7",
  "pytest-playwright-visual>=2.1.2",
  "pytest-timeout>=2.4",
  "pytest-xdist>=3.5",
  "ruff>=0.14.2",
  "slack-sdk>=3.35",
  "tach>=0.34",
  "trogon[typer]>=0.6",
  "ty>=0.0.18",
  "typer>=0.12",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9",
]
# Scoped mutation testing — `t3 mutation run` shells out to `uv run --group
# mutation mutmut` so the mutant child shares the project's test env (Django,
# pytest plugins) rather than an isolated uvx env. Out of the default `dev`
# group: it is a narrow, opt-in safety gate, not part of routine `uv sync`.
mutation = [
  "mutmut>=3.5,<4",
]
ui = [
  "trogon[typer]>=0.6",
]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true
lint.select = [ "ALL" ]
lint.ignore = [
  "CPY001", # missing-copyright-notice — not applicable
  # D1xx: missing docstrings — we prefer self-documenting code over docstrings
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  "D203", # one-blank-line-before-class — conflicts with D211
  "D213", # multi-line-summary-second-line — conflicts with D212
  # DOC: docstring content rules — disabled since we skip docstrings entirely
  "DOC201",
  "DOC402",
  "DOC501",
  "INP001", # implicit-namespace-package — scripts/ is not a package
  "ISC002", # implicit-str-concat-in-sequence — interferes with multiline strings
]
# Rules that conflict with ruff's own formatter.
# https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
lint.extend-ignore = [
  "COM812",
  "COM819", # trailing comma rules
  "D206",
  "D300",   # docstring whitespace/triple-quote rules
  "E111",
  "E114",
  "E117",   # indentation rules
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "Q004",   # quote rules
  "W191",   # tab indentation
]
# Scripts use typer (default args), deferred imports (E402), boolean params
# (FBT), subprocess (S4xx/S6xx), and print (T201).
lint.per-file-ignores."scripts/**/*.py" = [
  "C901",    # too-complex (intent detection is inherently branchy)
  "E402",    # module-import-not-at-top (deferred after lib.init)
  "FBT001",
  "FBT003",  # boolean positional/default (CLI flags)
  "PLC0415", # import-outside-top-level (deferred imports)
  "PLR0912", # too-many-branches (intent detection)
  "PLW1510", # subprocess-run-without-check (intentional)
  "PLW2901", # redefined-loop-variable (intentional strip pattern)
  "S404",
  "S603",
  "S607",    # subprocess security (trusted internal calls)
  "T201",    # print (CLI output)
]
lint.per-file-ignores."src/t3_bootstrap/_main.py" = [
  "PLC0415", # import-outside-top-level — the bootstrap's whole point is to import teatree AFTER sys.path manipulation.
]
lint.per-file-ignores."src/teatree/cli/*.py" = [
  "B008",   # function-call-in-default-argument (typer.Option/Argument is idiomatic)
  "FBT003", # boolean positional/default (typer CLI flags)
]
lint.per-file-ignores."src/teatree/cli/__init__.py" = [
  "RUF067", # Typer app construction, callbacks, helpers, and registration live here
]
lint.per-file-ignores."src/teatree/core/management/commands/*.py" = [
  "PLR6301", # django-typer command methods intentionally live on Command classes
]
lint.per-file-ignores."src/teatree/core/migrations/*.py" = [
  "ANN",    # Django migrations don't need type annotations
  "ARG001", # Django migration functions receive apps/schema_editor by convention
  "E501",   # Django-generated migrations are left in generated form
  "RUF012", # Django migrations intentionally use mutable class attributes
]
lint.per-file-ignores."src/teatree/core/overlay.py" = [
  "ARG002",
  "PLR6301", # overlay hook defaults are instance methods by contract
]
lint.per-file-ignores."src/teatree/core/views/*.py" = [
  "PLR6301", # Django class-based views intentionally implement HTTP verb methods on the class
]
# Trusted internal subprocess wrappers around git and postgres CLIs.
lint.per-file-ignores."src/teatree/utils/*.py" = [
  "S404",
  "S603",
]
# Tests use assert, magic values, private access, etc.
lint.per-file-ignores."tests/**/*.py" = [
  "ANN",     # type annotations not enforced in tests
  "ARG001",
  "ARG002",  # unused method arguments (overlay stubs)
  "ARG005",
  "PLC1901", # compare-to-empty-string
  "PLC2701", # import-private-name
  "PLR0904", # too-many-public-methods (test classes)
  "PLR2004", # magic-value-comparison
  "PLR6301", # no-self-use (test methods)
  "S101",    # assert (expected in tests)
  "S105",
  "S106",
  "S108",    # hardcoded-temp-file (test fixtures)
  "S404",    # subprocess-import
  "S603",    # subprocess call with trusted test inputs (integration tests)
  "SLF001",  # private-member-access (testing internals)
]
lint.fixable = [ "ALL" ]
lint.unfixable = [ "F401", "F811" ] # Never auto-delete imports — ruff misjudges usage in some patterns
lint.flake8-implicit-str-concat.allow-multiline = false
lint.flake8-tidy-imports.banned-api."__future__.annotations" = { msg = "Use native 3.10+ syntax (X | Y) instead of from __future__ import annotations" }
lint.isort.split-on-trailing-comma = false
# Cyclomatic-complexity ceiling (C901). Pinned explicit so it cannot silently
# drift up: the tree is green at 10 (ruff's implicit default). Raising it is a
# relaxation the quality-gates guard flags. The scripts/ tree exempts C901
# below, since intent detection is inherently branchy.
lint.mccabe.max-complexity = 10
lint.pydocstyle.convention = "google"
# Complexity limits
lint.pylint.max-args = 5
lint.pylint.max-bool-expr = 5
lint.pylint.max-branches = 12
lint.pylint.max-locals = 15
lint.pylint.max-nested-blocks = 5
lint.pylint.max-public-methods = 25
lint.pylint.max-returns = 6
lint.pylint.max-statements = 50
lint.preview = true

[tool.codespell]
dictionary = ".codespell-dictionary.txt,-"
ignore-words-list = "iterm"
skip = "src/teatree/core/static/teatree/js/*"

# --- Pytest ---

[tool.pytest.ini_options]
addopts = """
--color=yes --doctest-modules --exitfirst --failed-first
--strict-config --strict-markers --verbose --log-cli-level=INFO
--cov --cov-report=term-missing:skip-covered --cov-branch
--reuse-db
"""
timeout = 60
DJANGO_SETTINGS_MODULE = "tests.django_settings"
django_find_project = false
testpaths = [ "tests" ]
pythonpath = [ ".", "src", "scripts", "scripts/hooks", "tests" ]
filterwarnings = [
  "error",
  "ignore:In Typer, only the parameter 'autocompletion' is supported.*:DeprecationWarning",
  "ignore:POSTGRES_PASSWORD literal is deprecated.*:DeprecationWarning",
  "ignore:'BaseCommand' is deprecated.*:DeprecationWarning",
]
xfail_strict = true
markers = [
  "integration: tests that run real subprocesses (shell scripts, git, etc.)",
]

# --- Coverage ---

[tool.coverage.report]
fail_under = 93
precision = 1
show_missing = true
exclude_lines = [
  "if __name__",
  "if TYPE_CHECKING",
  "pragma: no cover",
]
partial_branches = [
  "pragma: no branch",
]

[tool.coverage.run]
branch = true
source = [
  "src/teatree",
]
omit = [ "src/teatree/core/migrations/*.py" ]

# Per-module coverage floors — read by ``t3 ci coverage`` and enforced by
# ``tests/test_coverage_floor_guard.py::TestPerModuleFloorsConfig``.
# Tighter than the project-wide 93% floor for newly-added modules where a
# small file dropping to 30% would still leave the project >= 93%.

# --- import-linter ---
# Complements tach: tach's depends_on is a direct-edge allow-list. The one
# invariant tach's per-module model cannot express is wildcard
# sibling-independence (the mini-loops must not import each other) — that is the
# "Mini-loops are mutually independent" contract below. The acyclic and
# backend/agent-independence guarantees are now enforced by tach itself
# (forbid_circular_dependencies = true; teatree.core.depends_on no longer lists
# backends/agents), so import-linter does not duplicate them.
# (BLUEPRINT §17.6.2, #724/#725, #1922.)

[tool.importlinter]
root_package = "teatree"

[[tool.importlinter.contracts]]
name = "Substrate must not import a concrete overlay"
type = "forbidden"
source_modules = [
  "teatree.core",
  "teatree.cli",
  "teatree.loop",
  "teatree.loops",
  "teatree.backends",
  "teatree.agents",
]
forbidden_modules = [ "teatree.contrib" ]

[[tool.importlinter.contracts]]
name = "Mini-loops are mutually independent"
type = "independence"
modules = [
  "teatree.loops.arch_review",
  "teatree.loops.audit",
  "teatree.loops.dispatch",
  "teatree.loops.dogfood",
  "teatree.loops.followup",
  "teatree.loops.housekeeping",
  "teatree.loops.inbox",
  "teatree.loops.issue_implementer",
  "teatree.loops.news",
  "teatree.loops.resource_pressure",
  "teatree.loops.review",
  "teatree.loops.ship",
  "teatree.loops.tickets",
]

[tool.teatree.coverage]
per_module_floors = [
  { path = "src/teatree/loop/persistence.py", floor = 80 },
  { path = "src/teatree/loop/rendering.py", floor = 80 },
  { path = "src/teatree/loop/dispatch.py", floor = 80 },
  { path = "src/teatree/loop/pr_ticket_index.py", floor = 80 },
]

# Conservative test-shape check — read by ``t3 tool test-shape`` (see
# ``src/teatree/quality/test_shape.py``). ``mode`` defaults to "warn"
# (non-blocking report); set "block" to fail CI on a regression. The
# baseline is the committed test:source ratio snapshot — a finding fires
# ONLY when the live ratio drops below it past ``tolerance`` (ratchet, never
# an absolute threshold). Re-baseline with ``t3 tool test-shape
# --update-baseline`` when a drop is intentional and reviewed.

[tool.teatree.test_shape]
mode = "warn"
min_cluster = 3
test_lines = 117490
source_lines = 64500
tolerance = 0.05

# Forward-guard: test files mirror their ``src/teatree/<pkg>/...`` module path
# as ``tests/teatree_<pkg>/...`` — read by ``t3 tool test-path-mirror`` (see
# ``src/teatree/quality/test_path_mirror.py``). ``mode = "block"`` makes the CI
# job a gate; the verdict is a ratchet over ``baseline`` (the committed count of
# files that predate the convention): a run is RED only when the live mis-pathed
# count EXCEEDS the baseline, so a new mis-pathed file fails CI while the
# documented floor never does. The baseline ratchets toward 0 as the relocation
# sweep proceeds — shrink it with ``t3 tool test-path-mirror --update-baseline``;
# raising it needs ``--allow-regression`` so the floor cannot silently loosen.

[tool.teatree.test_path_mirror]
mode = "block"
baseline = 219

# Scoped (NARROW) mutation testing — read by ``t3 mutation run`` (see
# ``src/teatree/quality/mutation.py``). Mutation testing is expensive and
# OpenClaw (a 1.4M-LOC AI-native codebase) uses none, so teatree applies it
# ONLY to verified high-value SAFETY modules where a silent regression is
# worst: a fail-closed gate that stops failing closed, a lost-update in a
# claim/CAS path, a merge-clear/keystone that stops gating. ``t3 mutation
# run`` mutates ONLY the registry entries a PR's diff touches and no-ops when
# none are touched, so most PRs pay nothing. ``mode`` defaults to "warn"
# (the CI ``mutation-diff`` job never fails the pipeline); flip to "block" to
# promote it to a gate without a workflow change. ``baseline_surviving`` is the
# ratchet floor (only shrinks): a per-module count of mutants knowingly left
# alive, so "block" mode fails only on a NEW survivor, never on the documented
# backlog. NARROW BY DESIGN — do NOT add the whole codebase; the conformance
# test ``tests/quality/test_mutation.py`` caps the registry size.

[tool.teatree.mutation]
mode = "warn"
timeout_seconds = 540
high_value_modules = [
  "src/teatree/on_behalf_gate.py",
  "src/teatree/core/on_behalf_gate_recorded.py",
  "src/teatree/core/merge/authorization.py",
  "src/teatree/core/merge/execution.py",
  "src/teatree/core/models/merge_clear.py",
  "src/teatree/core/availability.py",
  "src/teatree/core/loop_lease_manager.py",
  "src/teatree/loop/review_claim.py",
]
# Ratchet floor (only shrinks). This records the REAL current surviving-mutant
# count for EVERY high_value_module — the honest snapshot of today's state, NOT a
# disarm. The `mutation-full` job runs `--all`, mutating all eight modules, but
# the verdict compares the whole-run total against the SUM of these counts; when
# only a subset had an entry the `--all` total always exceeded the partial sum
# and the gate was permanently red (738 measured vs 131 baselined), blocking the
# first PR of every ISO week (#2142). The counts below come from the gate's own
# Linux CI output on the run that produced that failure and sum to exactly 738.
# From here the floor only ever SHRINKS: any NEW survivor on any safety module
# pushes the total above the recorded floor and the gate goes red. The flagship
# live-gate regression (resolve_on_behalf_verdict BLOCK->PROCEED) is killed and
# pinned separately by the kill-proof; these survivors are vacuous-coverage
# backlog (string builders, error formatters, name resolvers) recorded for
# paydown, the mechanism the ratchet is designed for. Tighten with
# `t3 mutation run --all --update-baseline` as the suite kills more of them.
baseline_surviving = [
  { path = "src/teatree/on_behalf_gate.py", count = 7 },
  { path = "src/teatree/core/on_behalf_gate_recorded.py", count = 6 },
  { path = "src/teatree/core/merge/authorization.py", count = 48 },
  { path = "src/teatree/core/merge/execution.py", count = 204 },
  { path = "src/teatree/core/models/merge_clear.py", count = 9 },
  { path = "src/teatree/core/availability.py", count = 124 },
  { path = "src/teatree/core/loop_lease_manager.py", count = 253 },
  { path = "src/teatree/loop/review_claim.py", count = 87 },
]

# Per-module test scope. mutmut maps a mutant to the tests that exercise its
# function by name, but its baseline "clean tests" pass runs the whole
# ``tests_dir`` once — so a narrow dir keeps each scoped run inside the 10-min
# CI cap. ``default`` is the fallback for an entry with no explicit mapping.

[tool.teatree.mutation.module_tests]
default = [ "tests/" ]
"src/teatree/on_behalf_gate.py" = [
  "tests/test_on_behalf_gate.py",
  "tests/test_on_behalf_post_mode.py",
]
"src/teatree/core/on_behalf_gate_recorded.py" = [ "tests/teatree_core/test_on_behalf_gate_recorded.py" ]
"src/teatree/core/merge/authorization.py" = [ "tests/teatree_core/test_merge_execution.py" ]
"src/teatree/core/merge/execution.py" = [ "tests/teatree_core/test_merge_execution.py" ]
"src/teatree/core/models/merge_clear.py" = [ "tests/teatree_core/test_merge_clear_verdict_must_be_merge_safe.py" ]
"src/teatree/core/availability.py" = [ "tests/teatree_core/test_availability.py" ]
"src/teatree/core/loop_lease_manager.py" = [ "tests/teatree_core/test_loop_lease.py" ]
"src/teatree/loop/review_claim.py" = [ "tests/teatree_loop/test_review_claim_discipline.py" ]

[tool.uv.build-backend]
module-name = [ "teatree", "t3_bootstrap" ]

# --- Ty (static type checker) ---
# https://github.com/astral-sh/ty

[tool.ty]
terminal = { error-on-warning = true }

[tool.ty.src]
exclude = [ ".claude/worktrees/" ]

[tool.ty.environment]
extra-paths = [ ".", "src", "scripts", "scripts/hooks", "tests" ]
python-version = "3.13"

[tool.ty.analysis]
allowed-unresolved-imports = [
  "django.tasks", # Django 6 exposes this dynamically and ty cannot resolve it yet, even with django-types
  "markitdown",   # Optional dependency (markdown extra), guarded by try/except ImportError
  "mkdocs",       # Optional dependency, guarded by try/except ImportError
  "lib.env",      # Legacy scripts — guarded by try/except ImportError
  "lib.gitlab",   # Legacy scripts — guarded by try/except ImportError
  "lib.registry", # Legacy scripts — guarded by try/except ImportError
]

[tool.ty.rules]
division-by-zero = "error"
possibly-unresolved-reference = "error"
unused-ignore-comment = "error"
no-matching-overload = "error"

[[tool.ty.overrides]]
include = [ "tests" ]
# Tests use tmp_path / "file" (ty can't resolve Path.__truediv__) and
# intentionally use broad *args/**kwargs for monkey-patching
[tool.ty.overrides.rules]
unsupported-operator = "ignore"
invalid-argument-type = "ignore"
unresolved-attribute = "ignore"

[tool.uv]
managed = true
package = true

# --- uv audit advisory lane (souliane/teatree#2292) ---
# Allowlist for accepted advisories surfaced by the NON-BLOCKING `uv audit`
# preview lane (CI job `uv-audit-advisory`). The advisory lane never reds the
# build, so this list is informational today; it documents the structure the
# lane will read once `uv audit` is promoted to blocking. The blocking gate is
# still pip-audit (`requirements.audit.ignore`), which is the file to edit to
# suppress a vulnerability that would otherwise fail CI.
#
# Add OSV / GHSA ids, one per `ignore` entry, e.g.
#   ignore = [ "GHSA-xxxx-xxxx-xxxx" ]  # package==1.2.3: justification + link

[tool.teatree.uv_audit]
ignore = [  ]
